# dashboard

./: .gitignore  LICENSE  README.org  bokeh_server.py  index.html  mypy.ini  pyproject.toml  rolling_errors_1.html  rolling_errors_10.html  rolling_errors_11.html  rolling_errors_2.html  rolling_errors_3.html  rolling_errors_4.html  rolling_errors_5.html  rolling_errors_6.html  rolling_errors_7.html  rolling_errors_8.html  rolling_errors_9.html  ruff.toml  running.html  setup.py  sleep.html  sleep_all.html  sleep_correlations.html  sleep_vs_exercise.html  test_rolling.html  test_scatter_matrix_1.html  test_scatter_matrix_10.html  test_scatter_matrix_11.html  test_scatter_matrix_12.html  test_scatter_matrix_13.html  test_scatter_matrix_14.html  test_scatter_matrix_15.html  test_scatter_matrix_16.html  test_scatter_matrix_17.html  test_scatter_matrix_18.html  test_scatter_matrix_19.html  test_scatter_matrix_2.html  test_scatter_matrix_20.html  test_scatter_matrix_3.html  (+9 more)
.ci/: run
.github/workflows/: main.yml
notebooks/: bokeh_test.ipynb
src/dashboard/: __init__.py  __main__.py  blood.py  cardio.py  combined.py  conftest.py  data.py  environment.py  exercise.py  location.py  misc.py  rescuetime.py  running.py  settings.py  sleep.py  sleepiness.py  tabs.py  test_dashboard.py  weight.py
src/dashboard/core/: __init__.py  analysis.py  bokeh.py  common.py  conftest.py  pandas.py  tabs.py  test_core.py  tests.py
