# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "dashboard"
dependencies = [
    "more-itertools",
    "pytz",
    "pandas",
    "bokeh",

    # todo could be optional?
    "hvplot",
    "statsmodels",
    "xyzservices",  # tile providers
]
requires-python = ">=3.12"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
# license = {file = "LICENSE"}
# authors = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
# maintainers = [
#     {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
# ]
#
# [project.urls]
# Homepage = "https://github.com/karlicoss/dashboard"
##


[project.optional-dependencies]
optional = [ ]

[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default? 
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.1a16",

    "types-pytz",
    "pandas-stubs",

    "hypothesis",
    "faker",

    "HPI @ git+https://github.com/karlicoss/HPI",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.hatch.metadata]
# needed to allow direct git url for "git+https" dependency
# NOTE: tool.uv.sources also works, but it would only work with uv, not pip
allow-direct-references = true
